Fixed all guns showing instead of only the necessary ones Description: * Modified lobby.css 	- z-index of guns is now 11, which is above the missions box so they appear on top of it. * Modified lobby9.js 	- Edited distributeGuns() to accept a parameter specifying the number of guns(shields) to show. 	- Moved the distributeGuns() function call outside the for loop to save processing time.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -361,6 +361,7 @@ p {
 
 .gun {
     pointer-events:none;
+    z-index: 11; /*Above the missions box which is 10*/
 }
 
 .role-p {
